a whole bunch of changes

--- a/contact.html
+++ b/contact.html
@@ -55,14 +55,12 @@
     </header>
 
   </div><!-- Begin page content -->
-
-  <div class="container" id="holder">
-    <div class="content">
+    <div class="placement"> 
+    <div class="container">
       <div class="row">
-        
-      <div class="span12" style="background-color: #002366;padding-bottom: 20px;">
-        <div class="title">
-          <h1 style="color:white;padding-top:5px;text-align:center;">Contact</h1>
+        <div class="col-lg-12">
+          <div class="title">
+          <h1 style="padding-top:5px;text-align:center;">Contact</h1>
         </div>
         <form method="post" action="/contact/index.php" id="FORM_1">
             <div class="field">
@@ -80,11 +78,12 @@
             <button id="INPUT_14" >SEND</button>
   
         </form>
-      </div>
 
+        </div>
       </div>
     </div>
   </div>
+
 </div>
 
 <div id="footer">
@@ -111,4 +110,5 @@
     <script src="includes/ready.js"></script>
   
 
-</body></html>
+</body>
+</html>
