--- a/officers.html
+++ b/officers.html
@@ -47,25 +47,21 @@
         </nav>
       </header>
     </div><!-- Begin page content -->
-
-    <div class="container" id="holder">
-
-
-      <div class="content">
-
-      <h1>Officers</h1>
-       <div class="row">
-        <div class="span4">
+     <div class="placement"> 
+    <div class="container">
+      <div class="row">
+        <h1 style="">Officers</h1>
+          <div class="span4">
           <h2>President</h2>
           <p class="aboutme">
             <img src="images/officers/1.jpg"/></br> </br> 
             Name: Chigozi C. Yejekwe</br>
             Year: Senior</br> 
-            Major: Computer Science</br> 
+            Major: Computer Science; Biology</br> 
             Hometown: Chicago, IL</br>
             Email: <a href="mailto:Cyejekwe11@utexas.edu" target="_top">Cyejekwe11@utexas.edu</a>
             </br></br>
-            Originally born in Nigeria and moved to the U.S. when I was 4 and grew up in Chicago and moved to Austin to attend the University of Texas – Austin. Some of my favorite shows include How I Met Your Mother, Breaking Bad, Walking Dead, and Family Guy. Some of my favorite hobbies include sports, reading, and hanging with his bros and my favorite teams are the Green Bay Packers, Chicago Blackhawks, the Chicago Bulls, and of course, the Texas Longhorns. HOOK ‘EM!
+            Originally born in Nigeria and moved to the U.S. when I was 4 and grew up in Chicago and moved to Austin to attend the University of Texas – Austin. Some of my favorite shows include How I Met Your Mother, Breaking Bad, Walking Dead, and Family Guy. Some of my favorite hobbies include sports, reading, and hanging with my bros and my favorite teams are the Green Bay Packers, Chicago Blackhawks, the Chicago Bulls, and of course, the Texas Longhorns. HOOK ‘EM!
           </p>
         </div>
         <div class="span4">
@@ -95,12 +91,12 @@
           </p>
         </div>
 
+       
 
         </div>
-  
-   
       </div>
     </div>
+  </div>
 
 </div>
 
