--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <link href="includes/sticky-footer-navbar.css" rel="stylesheet">
     <link href="includes/font-awesome.css" rel="stylesheet">
   <link href="includes/style.css" rel="stylesheet">
-    
-
+  <link href="includes/slideshow/demoStyleSheet.css" rel="stylesheet">
 </head>
 
 <!-- Wrap all page content here -->
@@ -46,18 +45,36 @@
       </nav>
     </header>
   </div><!-- Begin page content -->
+  <div class="placement blue"> 
 
-    <!-- Begin page content -->
-<!--     <div class="container" id="holder">
-      <div class="banner">
-        <ul>
-          <li><img src="images/symbol.jpg"/></li>
-          <li><img src="images/1.jpg"/></li>
-          <li><img src="images/2.jpg"/></li>
-          <li><img src="images/3.jpg"/></li>
-        </ul>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div id="slideshowWrapper">
+            <ul id="slideshow">
+              <li><img src="images/3.jpg" width="640" height="480" border="0" alt="" /></li>
+              <li><img src="images/2.jpg" width="640" height="480" border="0" alt="" /></li>
+              <li><img src="images/1.jpg" width="640" height="480" border="0" alt="" /></li> <!-- This is the first image in the slideshow -->
+            </ul><br clear="all" />
+          </div>
+        </div>
       </div>
-    </div> -->
+    </div>
+  </div>
+  <div class="placement"> 
+    <div class="container" >
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 style="color:#ccc ">Mission Statement</h1>
+          <h2 style="font-style:italic;color:black;">
+          ''Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
+
+          Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.''
+        </h2>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </div>
 
@@ -84,8 +101,6 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="includes/jquery-1.10.2.min.js"></script>
     <script src="includes/bootstrap.js"></script>
-    <script src="includes/unslider.min.js"></script>
+    <script src="includes/slideshow/fadeSlideShow.js"></script>
     <script src="includes/ready.js"></script>
-  
-
 </body></html>
