changed design, adding content headers

--- a/parents.html
+++ b/parents.html
@@ -46,19 +46,78 @@
       </nav>
     </header>
   </div><!-- Begin page content -->
+  <div class="placement"> 
+    <div class="container" >
+      <div class="row">
+        <div class="col-lg-12">
+          <h1>Why Sigma Kappa Phi?</h1>
+          <h2 style="font-style:italic;color:black;">
 
-    <!-- Begin page content -->
-<!--     <div class="container" id="holder">
-      <div class="banner">
-        <ul>
-          <li><img src="images/symbol.jpg"/></li>
-          <li><img src="images/1.jpg"/></li>
-          <li><img src="images/2.jpg"/></li>
-          <li><img src="images/3.jpg"/></li>
-        </ul>
+        </h2>
+        </div>
       </div>
-    </div> -->
+    </div>
+  </div>
+  <div class="placement blue"> 
+    <div class="container" >
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 style="color:#ccc; ">Networking</h1>
+          <h2 style="font-style:italic;color:black;">
 
+        </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="placement grey"> 
+    <div class="container" >
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 style="color:white; ">Benefits of Fraternity Life</h1>
+          <h2 style="font-style:italic;color:black;">
+
+        </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="placement"> 
+    <div class="container" >
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 style="color:#002366 ">Non-Hazing Policy</h1>
+          <h2 style="font-style:italic;color:black;">
+
+        </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="placement blue"> 
+    <div class="container" >
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 style="color:#ccc ">Manditory Study Hours</h1>
+          <h2 style="font-style:italic;color:black;">
+
+        </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="placement grey"> 
+    <div class="container" >
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 style="color:white;">Accomplishments</h1>
+          <h2 style="font-style:italic;color:black;">
+
+        </h2>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div id="footer">
