--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="includes/font-awesome.css" rel="stylesheet">
   <link href="includes/style.css" rel="stylesheet">
   <link href="includes/slideshow/demoStyleSheet.css" rel="stylesheet">
+
 </head>
 
 <!-- Wrap all page content here -->
@@ -45,7 +46,7 @@
       </nav>
     </header>
   </div><!-- Begin page content -->
-  <div class="placement blue"> 
+  <div class="placement"> 
 
     <div class="container">
       <div class="row">
@@ -64,15 +65,13 @@
       </div>
     </div>
   </div>
-  <div class="placement"> 
+  <div class="placement grey"> 
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1 style="color:#ccc ">Mission Statement</h1>
+          <h1 style="color:#002366 ">Mission Statement</h1>
           <h2 style="font-style:italic;color:black;">
-          ''Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
-
-          Gumbo beet greens corn soko endive gumbo gourd. Parsley shallot courgette tatsoi pea sprouts fava bean collard greens dandelion okra wakame tomato. Dandelion cucumber earthnut pea peanut soko zucchini.''
+          ''We, the brothers of Sigma Kappa Phi, will strive to perfect and unite an organization of unique individuals blind to color, social standing, and culture. Our purpose remains to dedicate ourselves to the needs of the community, while preserving our morals of honor, integrity, unity, and most importantly brotherhood. We strive to provide a truly multicultural experience to any man hoping to advance oneself through the use of Education, Service, and Brotherhood.''
         </h2>
         </div>
       </div>
