--- a/contact.html
+++ b/contact.html
@@ -31,24 +31,17 @@
       <nav class="pull-right" id="navigation">
         <ul class="nav">
           <li><a href="index.html">Home</a></li>
-
-          <li><a href="rush.html">Rush</a></li>
-
+          <li><a href="rush.php">Rush</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href=
             "#">About<b class="caret"></b></a>
-
             <ul class="dropdown-menu">
               <li><a href="contact.html">Contact</a></li>
-
               <li><a href="officers.html">Officers</a></li>
-
               <li><a href="history.html">History</a></li>
             </ul>
           </li>
-
           <li><a href="gallery.html">Gallery</a></li>
-
           <li><a href="parents.html">Parents</a></li>
         </ul>
       </nav>
@@ -60,7 +53,7 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="title">
-          <h1 style="padding-top:5px;text-align:center;">Contact</h1>
+          <h1 style="padding-top:5px;">Contact Us</h1>
         </div>
         <form method="post" action="/contact/index.php" id="FORM_1">
             <div class="field">
@@ -95,19 +88,18 @@
   </div>
 
   <div class="container" id="site-info-footer">
-    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma
-    Kappa Phi, 2013.</span> <span style=
-    "float:right;display:inline-block;">Created by: <a href="">Yves
-    Courtois</a></span></p>
+    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma Kappa Phi, 2013.</span> <span style=
+    "float:right;display:inline-block;">Created by: <a href="http://yvescourtois.com/">Yves Courtois</a></span></p>
   </div>
 </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="includes/jquery-1.10.2.min.js"></script>
-    <script src="includes/bootstrap.js"></script>
-    <script src="includes/unslider.min.js"></script>
-    <script src="includes/ready.js"></script>
+
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="includes/jquery-1.10.2.min.js"></script>
+  <script src="includes/bootstrap.js"></script>
+  <script src="includes/unslider.min.js"></script>
+  <script src="includes/ready.js"></script>
   
 
 </body>
