added contents to parents, links to footer

--- a/history.html
+++ b/history.html
@@ -31,7 +31,7 @@
       <nav class="pull-right" id="navigation">
         <ul class="nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="rush.html">Rush</a></li>
+          <li><a href="rush.php">Rush</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">About<b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -46,36 +46,30 @@
       </nav>
     </header>
   </div><!-- Begin page content -->
+  <div class="placement"> 
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
 
-    <!-- Begin page content -->
-<!--     <div class="container" id="holder">
-      <div class="banner">
-        <ul>
-          <li><img src="images/symbol.jpg"/></li>
-          <li><img src="images/1.jpg"/></li>
-          <li><img src="images/2.jpg"/></li>
-          <li><img src="images/3.jpg"/></li>
-        </ul>
+        </div>
       </div>
-    </div> -->
+    </div>
+  </div>
+
 
 </div>
 
 <div id="footer">
   <div class="container" style="text-align:center">
     <ul class="footericons">
-       <li><a href=""><i class="fa fa-facebook fa-3x"></i></a></li>
-        <li><a href=""><i class="fa fa-twitter fa-3x"></i></a></li>
+       <li><a href="https://www.facebook.com/SKPhi2007"><i class="fa fa-facebook fa-3x"></i></a></li>
+        <li><a href="https://twitter.com/UT_SKPhi"><i class="fa fa-twitter fa-3x"></i></a></li>
     </ul>
   </div>
 
   <div class="container" id="site-info-footer">
-    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma
-    Kappa Phi, 2013.</span>
-    
-    <span style=
-    "float:right;display:inline-block;">Created by: <a href="">Yves
-    Courtois</a></span></p>
+    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma Kappa Phi, 2013.</span>
+    <span style="float:right;display:inline-block;">Created by: <a href="http://yvescourtois.com/">Yves Courtois</a></span></p>
   </div>
 </div>
 
