--- a/index.html
+++ b/index.html
@@ -14,30 +14,31 @@
     <link href="includes/bootstrap.css" rel="stylesheet">
     <link href="includes/sticky-footer-navbar.css" rel="stylesheet">
     <link href="includes/font-awesome.css" rel="stylesheet">
-  <link href="includes/style.css" rel="stylesheet">
+    <link href="includes/style.css" rel="stylesheet">
   <link href="includes/slideshow/demoStyleSheet.css" rel="stylesheet">
-
+   
 </head>
 
 <!-- Wrap all page content here -->
 <body>
-<div id="wrap">
-    <!-- Fixed navbar -->
+ <div id="wrap">
+  <!-- Fixed navbar -->
 
-    <div class="container-fluid container-header">
+  <div class="container-fluid container-header">
     <header class="container" id="header">
       <a class="pull-left" href="index.html"><img alt="" src="images/symbol.jpg"></a>
 
       <nav class="pull-right" id="navigation">
         <ul class="nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="rush.html">Rush</a></li>
+          <li><a href="rush.php">Rush</a></li>
           <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">About<b class="caret"></b></a>
+            <a class="dropdown-toggle" data-toggle="dropdown" href=
+            "#">About<b class="caret"></b></a>
             <ul class="dropdown-menu">
               <li><a href="contact.html">Contact</a></li>
               <li><a href="officers.html">Officers</a></li>
-               <li><a href="history.html">History</a></li>
+              <li><a href="history.html">History</a></li>
             </ul>
           </li>
           <li><a href="gallery.html">Gallery</a></li>
@@ -45,7 +46,10 @@
         </ul>
       </nav>
     </header>
+
   </div><!-- Begin page content -->
+
+
   <div class="placement"> 
 
     <div class="container">
@@ -69,7 +73,7 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1 style="color:#002366 ">Mission Statement</h1>
+          <h1 style="color:white;">Mission Statement</h1>
           <h2 style="font-style:italic;color:black;">
           ''We, the brothers of Sigma Kappa Phi, will strive to perfect and unite an organization of unique individuals blind to color, social standing, and culture. Our purpose remains to dedicate ourselves to the needs of the community, while preserving our morals of honor, integrity, unity, and most importantly brotherhood. We strive to provide a truly multicultural experience to any man hoping to advance oneself through the use of Education, Service, and Brotherhood.''
         </h2>
@@ -83,26 +87,26 @@
 <div id="footer">
   <div class="container" style="text-align:center">
     <ul class="footericons">
-       <li><a href=""><i class="fa fa-facebook fa-3x"></i></a></li>
-        <li><a href=""><i class="fa fa-twitter fa-3x"></i></a></li>
+       <li><a href="https://www.facebook.com/SKPhi2007"><i class="fa fa-facebook fa-3x"></i></a></li>
+        <li><a href="https://twitter.com/UT_SKPhi"><i class="fa fa-twitter fa-3x"></i></a></li>
     </ul>
   </div>
 
   <div class="container" id="site-info-footer">
-    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma
-    Kappa Phi, 2013.</span>
-    
-    <span style=
-    "float:right;display:inline-block;">Created by: <a href="">Yves
-    Courtois</a></span></p>
+    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma Kappa Phi, 2013.</span>
+    <span style="float:right;display:inline-block;">Created by: <a href="http://yvescourtois.com/">Yves Courtois</a></span></p>
   </div>
 </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="includes/jquery-1.10.2.min.js"></script>
-    <script src="includes/bootstrap.js"></script>
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="includes/jquery-1.10.2.min.js"></script>
+  <script src="includes/bootstrap.js"></script>
+  <script src="includes/unslider.min.js"></script>
     <script src="includes/slideshow/fadeSlideShow.js"></script>
-    <script src="includes/ready.js"></script>
-</body></html>
+  <script src="includes/ready.js"></script>
+  
+
+</body>
+</html>
