--- a/officers.html
+++ b/officers.html
@@ -32,7 +32,7 @@
         <nav class="pull-right" id="navigation">
           <ul class="nav">
             <li><a href="index.html">Home</a></li>
-            <li><a href="rush.html">Rush</a></li>
+            <li><a href="rush.php">Rush</a></li>
             <li class="dropdown">
               <a class="dropdown-toggle" data-toggle="dropdown" href="#">About<b class="caret"></b></a>
               <ul class="dropdown-menu">
@@ -109,22 +109,17 @@
   </div>
 
   <div class="container" id="site-info-footer">
-    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma
-    Kappa Phi, 2013.</span>
-    
-    <span style=
-    "float:right;display:inline-block;">Created by: <a href="">Yves
-    Courtois</a></span></p>
+    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma Kappa Phi, 2013.</span>
+    <span style="float:right;display:inline-block;">Created by: <a href="http://yvescourtois.com/">Yves Courtois</a></span></p>
   </div>
 </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="includes/jquery-1.10.2.min.js"></script>
-    <script src="includes/bootstrap.js"></script>
-    <script src="includes/unslider.min.js"></script>
-    <script src="includes/ready.js"></script>
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="includes/jquery-1.10.2.min.js"></script>
+  <script src="includes/bootstrap.js"></script>
+  <script src="includes/unslider.min.js"></script>
+  <script src="includes/ready.js"></script>
   
-
 </body></html>
