--- a/parents.html
+++ b/parents.html
@@ -31,7 +31,7 @@
       <nav class="pull-right" id="navigation">
         <ul class="nav">
           <li><a href="index.html">Home</a></li>
-          <li><a href="rush.html">Rush</a></li>
+          <li><a href="rush.php">Rush</a></li>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">About<b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -50,20 +50,13 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1>Why Sigma Kappa Phi?</h1>
-          <h2 style="font-style:italic;color:black;">
+          <h1 >Why Greek Life?</h1>
+          <h2 style="color:black;">
 
-        </h2>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="placement blue"> 
-    <div class="container" >
-      <div class="row">
-        <div class="col-lg-12">
-          <h1 style="color:#ccc; ">Networking</h1>
-          <h2 style="font-style:italic;color:black;">
+          <p style="font-size:80%;">Often times the perception of Greek life is one that’s negative and that is an unfortunate shame because there are a lot of benefits from Greek life. Did you know that since 1825, all but 3 U.S. Presidents have been a member of a fraternity.  Its little positive facts like this that most people don’t know of. Aside from the friendship and brotherhood aspect of fraternity life, fraternity members tend to have higher GPAs than non-Greek members thanks to the academic support network that fraternities often provide.</p>
+          <p style="font-size:80%;">Fraternity men are active within their communities and often take part in many community service and volunteering opportunities. Many fraternizes also have official philanthropies that they donate to as well. Fraternities also often have strong networks that brothers can use to their advantage post-graduation; after all 85% of fortune 500 companies were members of a Greek organization.</p>
+          <p style="font-size:80%;">Finally, Greek life, allows young adults to learn how to be a leader. There is a lot of planning and attention to the detail that go hand-in-hand with being in a fraternity. When an event is decided upon, the event has to be planned out, a budget has to be made, and marketing has to be done.  It’s not running a fortune 500 company to be sure, but learning to operate like one is it is a starting point.  
+          <a href="http://www.umkc.edu/getinvolved/fsa-national-statistics.asp">http://www.umkc.edu/getinvolved/fsa-national-statistics.asp</a><p>
 
         </h2>
         </div>
@@ -74,8 +67,21 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1 style="color:white; ">Benefits of Fraternity Life</h1>
-          <h2 style="font-style:italic;color:black;">
+          <h1 style="color:white;">Diversity</h1>
+          <h2 style="color:black;">
+            <p style="font-size:80%;">Sigma Kappa Phi is a multicultural fraternity. We’re not just multicultural in regards to ethnicity and race but also our backgrounds, our beliefs, and our interests. Within our brotherhood, we have brothers who want to be businessmen and others who want to be doctors. We have brothers that are conservative, and others who are liberal. We all have our differences but we look past them and celebrate them and come together under the mantle of brotherhood. </p>
+        </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="placement blue"> 
+    <div class="container" >
+      <div class="row">
+        <div class="col-lg-12">
+          <h1 style="color:#ccc; ">Non-Hazing policy</h1>
+          <h2 style="color:white;">
+            <p style="font-size:80%;">Sigma Kappa Phi is a non-hazing fraternity. We believe that brotherhood does not mean physically or mentally demeaning others.  Hazing goes against what the University of Texas – Austin stands for as an institution of higher learning, what we stand for as a brotherhood, and what we, as individuals, stand for. Thus hazing has no place in our fraternity.</p>
 
         </h2>
         </div>
@@ -86,22 +92,15 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1 style="color:#002366 ">Non-Hazing Policy</h1>
-          <h2 style="font-style:italic;color:black;">
-
-        </h2>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="placement blue"> 
-    <div class="container" >
-      <div class="row">
-        <div class="col-lg-12">
-          <h1 style="color:#ccc ">Manditory Study Hours</h1>
-          <h2 style="font-style:italic;color:black;">
-
-        </h2>
+          <h1 style="color:#002366 ">Why Sigma Kappa Phi?</h1>
+          <h2 style="color:black;">
+            <p style="color:#ccc; ">Social & Service</p>
+            <p style="font-size:80%;">Sigma Kappa Phi is a social and service fraternity. What this means is that while we do host social events on campus; whether it be by ourselves or with another organization, we also take part in community service as well. We feel that a better man is not just someone that knows how to interact with other people but one who can give back to the community as well. Our chapter is dedicated to sick children and our official philanthropy is the Make-A-Wish foundation.</p>
+            <p style="color:#ccc; ">Education</p>
+            <p style="font-size:80%;">At the end of the day, we are college students; our education is of the utmost importance and being able to graduate with a degree is a goal that we all aspire to reach. All active brothers are required by our constitutional by-laws to study for 20 hours a week at minimum.</p>
+            <p style="color:#ccc; ">Brotherhood</p>
+            <p style="font-size:80%;">College is an exciting time for young men; it is our true first step toward the “real world.” For many, it’s their first time living away from home and it’s new and unexpected.  Fraternity life allows us to form bonds with other people that last longer than just a semester when they shared a class. Our goal is to create lifelong friends who will be there to motivate and support. The goal is to create a second home for our brothers; a family away from home.</p>
+          </h2>
         </div>
       </div>
     </div>
@@ -110,8 +109,12 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1 style="color:white;">Accomplishments</h1>
-          <h2 style="font-style:italic;color:black;">
+          <h1 style="color:white;">Cost</h1>
+          <h2 style="color:black;">
+            <p style="font-size:80%;">
+            Membership dues are $300 per semester. 
+            Who can I contact for more info?
+            Contact information for our chapter may be found on our <a href="contact.html">Contact</a> page.</a>
 
         </h2>
         </div>
@@ -123,28 +126,24 @@
 <div id="footer">
   <div class="container" style="text-align:center">
     <ul class="footericons">
-       <li><a href=""><i class="fa fa-facebook fa-3x"></i></a></li>
-        <li><a href=""><i class="fa fa-twitter fa-3x"></i></a></li>
+       <li><a href="https://www.facebook.com/SKPhi2007"><i class="fa fa-facebook fa-3x"></i></a></li>
+        <li><a href="https://twitter.com/UT_SKPhi"><i class="fa fa-twitter fa-3x"></i></a></li>
     </ul>
   </div>
 
   <div class="container" id="site-info-footer">
-    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma
-    Kappa Phi, 2013.</span>
-    
-    <span style=
-    "float:right;display:inline-block;">Created by: <a href="">Yves
-    Courtois</a></span></p>
+    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma Kappa Phi, 2013.</span>
+    <span style="float:right;display:inline-block;">Created by: <a href="http://yvescourtois.com/">Yves Courtois</a></span></p>
   </div>
 </div>
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="includes/jquery-1.10.2.min.js"></script>
-    <script src="includes/bootstrap.js"></script>
-    <script src="includes/unslider.min.js"></script>
-    <script src="includes/ready.js"></script>
+  <!-- Bootstrap core JavaScript
+  ================================================== -->
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="includes/jquery-1.10.2.min.js"></script>
+  <script src="includes/bootstrap.js"></script>
+  <script src="includes/unslider.min.js"></script>
+  <script src="includes/ready.js"></script>
   
 
 </body></html>
