--- a/contact.html
+++ b/contact.html
@@ -82,14 +82,14 @@
 <div id="footer">
   <div class="container" style="text-align:center">
     <ul class="footericons">
-       <li><a href=""><i class="fa fa-facebook fa-3x"></i></a></li>
-        <li><a href=""><i class="fa fa-twitter fa-3x"></i></a></li>
+       <li><a href="https://www.facebook.com/SKPhi2007"><i class="fa fa-facebook fa-3x"></i></a></li>
+        <li><a href="https://twitter.com/UT_SKPhi"><i class="fa fa-twitter fa-3x"></i></a></li>
     </ul>
   </div>
 
   <div class="container" id="site-info-footer">
-    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma Kappa Phi, 2013.</span> <span style=
-    "float:right;display:inline-block;">Created by: <a href="http://yvescourtois.com/">Yves Courtois</a></span></p>
+    <p><span style="float:left;display:inline-block;">© Alpha Chapter of Sigma Kappa Phi, 2013.</span>    
+    <span style="float:right;display:inline-block;">Created by: <a href="http://yvescourtois.com/">Yves Courtois</a></span></p>
   </div>
 </div>
 
