one big final commit

--- a/parents.html
+++ b/parents.html
@@ -14,8 +14,7 @@
     <link href="includes/bootstrap.css" rel="stylesheet">
     <link href="includes/sticky-footer-navbar.css" rel="stylesheet">
     <link href="includes/font-awesome.css" rel="stylesheet">
-  <link href="includes/style.css" rel="stylesheet">
-    
+    <link href="includes/style.css" rel="stylesheet">
 
 </head>
 
@@ -67,7 +66,7 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1 style="color:white;">Diversity</h1>
+          <h1>Diversity</h1>
           <h2 style="color:black;">
             <p style="font-size:80%;">Sigma Kappa Phi is a multicultural fraternity. We’re not just multicultural in regards to ethnicity and race but also our backgrounds, our beliefs, and our interests. Within our brotherhood, we have brothers who want to be businessmen and others who want to be doctors. We have brothers that are conservative, and others who are liberal. We all have our differences but we look past them and celebrate them and come together under the mantle of brotherhood. </p>
         </h2>
@@ -94,11 +93,11 @@
         <div class="col-lg-12">
           <h1 style="color:#002366 ">Why Sigma Kappa Phi?</h1>
           <h2 style="color:black;">
-            <p style="color:#ccc; ">Social & Service</p>
+            <p style="color:black; ">Social & Service</p>
             <p style="font-size:80%;">Sigma Kappa Phi is a social and service fraternity. What this means is that while we do host social events on campus; whether it be by ourselves or with another organization, we also take part in community service as well. We feel that a better man is not just someone that knows how to interact with other people but one who can give back to the community as well. Our chapter is dedicated to sick children and our official philanthropy is the Make-A-Wish foundation.</p>
-            <p style="color:#ccc; ">Education</p>
+            <p style="color:black; ">Education</p>
             <p style="font-size:80%;">At the end of the day, we are college students; our education is of the utmost importance and being able to graduate with a degree is a goal that we all aspire to reach. All active brothers are required by our constitutional by-laws to study for 20 hours a week at minimum.</p>
-            <p style="color:#ccc; ">Brotherhood</p>
+            <p style="color:black; ">Brotherhood</p>
             <p style="font-size:80%;">College is an exciting time for young men; it is our true first step toward the “real world.” For many, it’s their first time living away from home and it’s new and unexpected.  Fraternity life allows us to form bonds with other people that last longer than just a semester when they shared a class. Our goal is to create lifelong friends who will be there to motivate and support. The goal is to create a second home for our brothers; a family away from home.</p>
           </h2>
         </div>
@@ -109,7 +108,7 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1 style="color:white;">Cost</h1>
+          <h1>Cost</h1>
           <h2 style="color:black;">
             <p style="font-size:80%;">
             Membership dues are $300 per semester. 
@@ -142,7 +141,6 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="includes/jquery-1.10.2.min.js"></script>
   <script src="includes/bootstrap.js"></script>
-  <script src="includes/unslider.min.js"></script>
   <script src="includes/ready.js"></script>
   
 
