--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link href="includes/sticky-footer-navbar.css" rel="stylesheet">
     <link href="includes/font-awesome.css" rel="stylesheet">
     <link href="includes/style.css" rel="stylesheet">
-  <link href="includes/slideshow/demoStyleSheet.css" rel="stylesheet">
-   
+    <link href="includes/slideshow/demoStyleSheet.css" rel="stylesheet">
+    
 </head>
 
 <!-- Wrap all page content here -->
@@ -73,7 +73,7 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12">
-          <h1 style="color:white;">Mission Statement</h1>
+          <h1>Mission Statement</h1>
           <h2 style="font-style:italic;color:black;">
           ''We, the brothers of Sigma Kappa Phi, will strive to perfect and unite an organization of unique individuals blind to color, social standing, and culture. Our purpose remains to dedicate ourselves to the needs of the community, while preserving our morals of honor, integrity, unity, and most importantly brotherhood. We strive to provide a truly multicultural experience to any man hoping to advance oneself through the use of Education, Service, and Brotherhood.''
         </h2>
@@ -103,8 +103,7 @@
   <!-- Placed at the end of the document so the pages load faster -->
   <script src="includes/jquery-1.10.2.min.js"></script>
   <script src="includes/bootstrap.js"></script>
-  <script src="includes/unslider.min.js"></script>
-    <script src="includes/slideshow/fadeSlideShow.js"></script>
+  <script src="includes/fadeSlideShow.js"></script>
   <script src="includes/ready.js"></script>
   
 
