contact forms work

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <a class="dropdown-toggle" data-toggle="dropdown" href=
             "#">About<b class="caret"></b></a>
             <ul class="dropdown-menu">
-              <li><a href="contact.html">Contact</a></li>
+              <li><a href="contact.php">Contact</a></li>
               <li><a href="officers.html">Officers</a></li>
               <li><a href="history.html">History</a></li>
             </ul>
